# slimflow

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  python-app.yml
api/gridruns/: index.html
docs/: index.md
docs/api/: gridruns.md
docs/examples/: bgs.md
examples/bgs/: Snakefile  bgs.slim  bgs_config.yml  index.html
search/: search_index.json
slimflow/: __init__.py
tests/: test_slim_runs.py
tests/data/: test_config.yml
