[project]
name = "slimflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "polars>=1.12.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "matplotlib>=3.9.2",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "snakemake>=8.25.3",
    "tskit>=0.6.0",
]
